# grab

./: .travis.yml  cabal.project  flake.nix  readme.md  stack.yaml
.github/workflows/: test.hs  test.yml
bagparse/: bagparse.cabal
bagparse/src/BagParse/: Core.hs  Prelude.hs
bagparse/src/BagParse/Examples/: OrgRoster.hs
bagparse/src/BagParse/Form/: Errors.hs  Input.hs  Name.hs  Prelude.hs  Types.hs
bagparse/src/BagParse/List/: Prelude.hs  Types.hs
bagparse/src/BagParse/Parser/: Prelude.hs  State.hs  Types.hs  Validation.hs
bagparse/test/: OrgRoster.hs
configurations/: ghc-8.10.project  ghc-8.6.project  ghc-8.8.project  ghc-9.0.project  ghc-9.2.project
grab/: changelog.md  grab.cabal
grab-form/: changelog.md  grab-form.cabal
grab-form/src/BagParse/Form/: English.hs  Name.hs  Prelude.hs  Types.hs
grab-form/src/Data/: GrabForm.hs
grab-form/test/: OrgRoster.hs  hedgehog.hs  tutorial.hs
grab-form/test/Test/: Tutorial.hs
grab-form/test/Test/OrgRoster/: Concepts.hs  Grabs.hs  Tests.hs
grab/bench/: space.hs  time.hs
grab/bench/space/: Main.hs
grab/bench/time/: Main.hs
grab/src/BagParse/Form/: Log.hs
grab/src/BagParse/Parser/: Prelude.hs  Types.hs
grab/src/Control/: Grab.hs
grab/test/: Main.hs  core.hs  examples.hs  hedgehog.hs
