cabal-version: 2.4

name: bagparse
version: 0

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fdefer-typed-holes

  build-depends:
      base
    , containers
    , text

  exposed-modules:
      BagParse.Parser.Types
    , BagParse.Parser.Prelude
    , BagParse.List.Types
    , BagParse.List.Prelude
    , BagParse.Form.Types
    , BagParse.Form.Prelude
    , BagParse.Examples.OrgRoster

  default-extensions:
      ApplicativeDo
    , BlockArguments
    , DeriveFunctor
    , DerivingStrategies
    , DerivingVia
    , GADTs
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , KindSignatures
    , ImplicitParams
    , LambdaCase
    , OverloadedStrings
    , ScopedTypeVariables
    , StandaloneDeriving
    , TypeApplications
    , UnicodeSyntax
    , ViewPatterns
