cabal-version: 2.4

-- todo: rename to grab-bag
name: bagparse
version: 0

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fdefer-typed-holes

  build-depends:
      base
    , containers
    , text

  exposed-modules:
      BagParse.Parser.Types
    , BagParse.Parser.Prelude
    , BagParse.Form.Types
    , BagParse.Form.Errors
    , BagParse.Form.English
    , BagParse.Form.Input
    , BagParse.Form.Log
    , BagParse.Form.Name
    , BagParse.Form.Prelude

  default-extensions:
      BlockArguments
    , DeriveFunctor
    , DerivingStrategies
    , DerivingVia
    , GADTs
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , KindSignatures
    , ImplicitParams
    , LambdaCase
    , OverloadedStrings
    , ScopedTypeVariables
    , StandaloneDeriving
    , TypeApplications
    , UnicodeSyntax
    , ViewPatterns

test-suite core
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: core.hs

  build-depends:
      bagparse
    , base
    , containers
    , hedgehog
    , text

  default-extensions:
      ApplicativeDo
    , BlockArguments
    , LambdaCase
    , OverloadedStrings
    , ScopedTypeVariables
    , TemplateHaskell

test-suite OrgRoster
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: OrgRoster.hs

  build-depends:
      bagparse
    , base
    , containers
    , hedgehog
    , text

  default-extensions:
      ApplicativeDo
    , BlockArguments
    , LambdaCase
    , OverloadedStrings
    , ScopedTypeVariables
    , TemplateHaskell
