cabal-version: 2.4

name: grab-form
version: 0

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fdefer-typed-holes

  build-depends:
      base
    , containers
    , grab
    , text

  exposed-modules:
      BagParse.Form.Types
    , BagParse.Form.Errors
    , BagParse.Form.English
    , BagParse.Form.Input
    , BagParse.Form.Log
    , BagParse.Form.Name
    , BagParse.Form.Prelude

  default-extensions:
      BlockArguments
    , DeriveFunctor
    , DerivingStrategies
    , DerivingVia
    , GADTs
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , KindSignatures
    , ImplicitParams
    , LambdaCase
    , OverloadedStrings
    , ScopedTypeVariables
    , StandaloneDeriving
    , TypeApplications
    , UnicodeSyntax
    , ViewPatterns

test-suite OrgRoster
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: OrgRoster.hs

  build-depends:
      base
    , containers
    , grab-form
    , hedgehog
    , text

  default-extensions:
      ApplicativeDo
    , BlockArguments
    , LambdaCase
    , OverloadedStrings
    , ScopedTypeVariables
    , TemplateHaskell
