cabal-version: 2.4

name: grab-form
version: 0.0.0.1

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Data.GrabForm
  build-depends: base, containers, grab, text

test-suite hedgehog
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: hedgehog.hs
  build-depends: base, containers, grab-form, hedgehog, text

  other-modules:
      Test.Tutorial
    , Test.OrgRoster.Concepts
    , Test.OrgRoster.Grabs
    , Test.OrgRoster.Tests
