cabal-version: 2.4

name: grab-form
version: 0.0.0.1

tested-with: GHC==8.6.5

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Data.GrabForm
  build-depends:
      grab
    , base        ^>= 4.12.0.0
    , containers  ^>= 0.6.0.1
    , text        ^>= 1.2.3.1

test-suite hedgehog
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: hedgehog.hs
  build-depends:
      grab-form
    , base        ^>= 4.12.0.0
    , containers  ^>= 0.6.0.1
    , hedgehog    ^>= 0.6.1
    , text        ^>= 1.2.3.1

  other-modules:
      Test.Tutorial
    , Test.OrgRoster.Concepts
    , Test.OrgRoster.Grabs
    , Test.OrgRoster.Tests
