cabal-version: 2.4

name: grab
version: 0

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fdefer-typed-holes
  build-depends: base
  exposed-modules: Control.Grab

test-suite hedgehog
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: hedgehog.hs
  build-depends: base, containers, grab, hedgehog, text
