cabal-version: 2.4

name: grab
version: 0

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fdefer-typed-holes
  build-depends: base
  exposed-modules: Control.Grab

test-suite hedgehog
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: hedgehog.hs
  build-depends: base, grab, hedgehog
               , containers, text

-- This benchmark runs with a tightly limited stack size
-- to detect space leaks, as described by:
-- http://neilmitchell.blogspot.com/2015/09/detecting-space-leaks.html
--
-- Run it like this for a stack trace:
--
--     stack bench grab:space --profile --ba "+RTS -xc"
--
benchmark space
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: space.hs
  build-depends: base, grab
  ghc-options: "-with-rtsopts=-K1K"

benchmark time
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: time.hs
  build-depends: base, grab, criterion
