cabal-version: 2.4

name: grab
version: 0.0.0.1

tested-with: GHC==8.6.5

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fdefer-typed-holes
  exposed-modules: Control.Grab

  build-depends:
      base       ^>= 4.12.0.0

test-suite hedgehog
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: hedgehog.hs

  build-depends:
      grab
    , base       ^>= 4.12.0.0
    , hedgehog   ^>= 0.6.1

-- This benchmark runs with a tightly limited stack size
-- to detect space leaks, as described by:
-- http://neilmitchell.blogspot.com/2015/09/detecting-space-leaks.html
--
-- Run it like this for a stack trace:
--
--     stack bench grab:space --profile --ba "+RTS -xc"
--
benchmark space
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: space.hs
  ghc-options: "-with-rtsopts=-K1K"

  build-depends:
      grab
    , base       ^>= 4.12.0.0

benchmark time
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: time.hs
  build-depends:
      grab
    , base       ^>= 4.12.0.0
    , criterion  ^>= 1.5.5.0
